scripts/nullaway/wpi/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8.txt
../wpi/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Main.java:437: error: [NullAway] dereferenced expression getColaActual().get(piso_actual).frente() is @Nullable
                    total_delayed[traza] += clock - getColaActual().get(piso_actual).frente().getTiempoEntrada();
                                                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Main.java:440: error: [NullAway] dereferenced expression getColaActual().get(piso_actual).frente() is @Nullable
            internas[getColaActual().get(piso_actual).frente().getPisoDestino()] = 1;
                                                              ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
